# CastEngine

./: .gitmodules  CMakeLists.txt  CastEngine_UML.mdj  README.md  callgrind.out.108529  callgrind.out.108633  callgrind.out.110566  joe_dev.txt  makefile  populate_cmake_src_deps.py
CastDriver/: CMakeLists.txt
CastDriver/src/: main.cpp
CastEngine/: CMakeLists.txt
CastEngine/src/Cast/: TestFile.cpp  TestFile.h
CastEngine/src/Cast/API/OpenGL/: OpenGLCallbacks.cpp  OpenGLCallbacks.h  OpenGLWindow.cpp  OpenGLWindow.h
CastEngine/src/Cast/API/OpenGL/Rendering/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
CastEngine/src/Cast/API/OpenGL/Rendering/Shading/: OpenGLShaderProgram.cpp  OpenGLShaderProgram.h
CastEngine/src/Cast/API/Vulkan/: VulkanIncludeWrapper.h
CastEngine/src/Cast/API/Vulkan/DebugUtils/: VkDebugUtils.cpp  VkDebugUtils.h
CastEngine/src/Cast/API/Vulkan/Memory/: VulkanBuffer.h
CastEngine/src/Cast/API/Vulkan/Rendering/: GraphicsPipeline.cpp  GraphicsPipeline.h  Vertex.h  VulkanContext.cpp  VulkanContext.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h  VulkanWindow.cpp  VulkanWindow.h
CastEngine/src/Cast/Core/: EngineCore.cpp  EngineCore.h  Entry.cpp  Entry.h
CastEngine/src/Cast/Core/Components/: Transform.h
CastEngine/src/Cast/Core/Debug/: Logger.h  Logging.h  LoggingHeaderOnly.h  LoggingUserFormatter.h
CastEngine/src/Cast/Core/ECS/: EntityFactory.cpp  EntityFactory.h
CastEngine/src/Cast/Core/ECS/Components/: Components.h  TransformComponent.h
CastEngine/src/Cast/Core/GUI/: MainGUI.cpp  MainGUI.h  MainGUi.h
CastEngine/src/Cast/Core/Input/: InputManager.cpp  InputManager.h
CastEngine/src/Cast/Core/Rendering/: Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  WindowCallbacks.cpp  WindowCallbacks.h
CastEngine/src/Cast/Core/Rendering/Shader/: OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  Shader.h  ShaderParser.cpp  ShaderParser.h  ShaderProgram.cpp  ShaderProgram.h  UniformBufferObject.h
CastEngine/src/Cast/Core/Rendering/Shapes/: Cube.cpp  Cube.h  Shape.h
CastEngine/src/Cast/Core/Scenes/: DebugScene.cpp  DebugScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  StressTestScene.cpp  StressTestScene.h
CastEngine/src/Cast/Core/Utils/: DebugScene.cpp  DebugScene.h  MathUtils.h
CastEngine/src/Cast/Core/Utils/Files/: FileLoaderFactory.cpp  FileLoaderFactory.h
CastEngine/src/Cast/Platform/GLFW/: GLFWInputKeyStore.h
CastEngine/src/Cast/Platform/OpenGL/: OpenGLCallbacks.cpp  OpenGLCallbacks.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLWindow.cpp  OpenGLWindow.h
CastEngine/src/Cast/Platform/OpenGL/Rendering/: OpenGLRenderer.h
CastEngine/src/Resources/Shaders/: blinn_phong.frag  blinn_phong.frag.spv  blinn_phong.vert  blinn_phong.vert.spv  passthrough.frag  passthrough.vert  passthrough_3d.vert  passthrough_3d.vert.spv  passthrough_frag.spv  passthrough_instanced.vert  passthrough_instanced.vert.spv  passthrough_two.frag  passthrough_vert.spv  randf.spv  randv.spv  red.frag.spv  red_frag.spv
build_scripts/: build_run.bat  run.bat
build_scripts/build_scripts_linux/: build.sh  build_run.sh  run.sh  run_vulkan.sh
build_scripts/build_scripts_windows/: build.bat  build_run.bat  run.bat
build_scripts_windows/: build.bat  build_run.bat
